# sicp

./: README.md
my-solutions/midterms/midterm1/: 5.scm  6.scm  7.scm
my-solutions/project1/: twenty-one.scm
my-solutions/projects/project1/: joker.scm  twenty-one.scm
my-solutions/week01/hw/: 2.scm  3.scm  4.scm  5.scm  6.scm
my-solutions/week01/lab/: biggest-sum.scm  dupls-removed.scm  lab1  plural.scm
my-solutions/week02/hw/: 1.33.scm  1.40.scm  1.41.scm  1.43.scm  1.46.scm  extra.scm  hw2.scm
my-solutions/week02/lab/: 2.scm  7.scm
my-solutions/week03/hw/: 2.scm  4.scm  5.scm  6.scm
my-solutions/week03/hw/sicp/: 1.16.scm  1.35.scm  1.37.scm  1.38.scm
my-solutions/week03/lab/: 3.scm  4.scm  5.scm
my-solutions/week04/hw/: 2.10.scm  2.12.scm  2.20.scm  2.8.scm  cxr-function.scm  substitute.scm  substitute2.scm
my-solutions/week04/hw/sicp/: 2.17.scm  2.23.scm  2.6.scm  2.7.scm
my-solutions/week04/lab/: 2.18.scm  2.2.scm  2.3.scm  2.4.scm  5.scm
my-solutions/week05/hw/: 2.29.scm  2.30.scm  2.31.scm  2.32.scm  2.36.scm  2.37.scm  2.54.scm  2.67.scm  2.68.scm  2.69.scm  2.70.scm  calc.scm  huffman.scm
my-solutions/week05/lab/: 2.27.scm
my-solutions/week06/: bst.scm  infer.scm  scheme-1.scm  union.scm
my-solutions/week07/hw/: 1.scm  2.scm  3.scm  4.scm
my-solutions/week07/lab/: demo2.scm
my-solutions/week08/hw/: 3.3.scm  3.4.scm  3.7.scm  3.8.scm  extra.scm
my-solutions/week08/lab/: 1.scm  2.scm  3.scm
my-solutions/week09/hw/: 3.17.scm  3.18.scm  3.19.scm  3.23.scm  3.25.scm  bubble-sort.scm  vector-append.scm  vector-filter.scm
my-solutions/week09/lab/: 3a.scm
resources/Scheme/source/src/stk/: ChangeLog  ChangeLog.1  Makefile.in  config.h.in  configure  configure.in  install.bat  paths
resources/Scheme/source/src/stk/Demos/: Makefile.in
resources/Scheme/source/src/stk/Doc/: Makefile.in
resources/Scheme/source/src/stk/Doc/Extension/: Extending.dvi
resources/Scheme/source/src/stk/Doc/FAQ/: FAQ.dvi
resources/Scheme/source/src/stk/Doc/Isotas96/: Isotas96.dvi
resources/Scheme/source/src/stk/Doc/Manual/: Makefile.in  canvas.n
resources/Scheme/source/src/stk/Doc/Reference/: manual.dvi
resources/Scheme/source/src/stk/Doc/STklos+Tk/: STklos+Tk.dvi
resources/Scheme/source/src/stk/Extensions/: Makefile.in  jpeg.c  posix.c
resources/Scheme/source/src/stk/Gmp/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  gmp-stklos.h.in
resources/Scheme/source/src/stk/Help/: Makefile.in
resources/Scheme/source/src/stk/Lib/: Makefile.in  STk.init  init.stk  pp.stk  trace.stk
resources/Scheme/source/src/stk/STklos/: Makefile.in
resources/Scheme/source/src/stk/STklos/Tk/: Canvas.stklos
resources/Scheme/source/src/stk/Src/: Makefile.in  argv.c  dynload.c  error.c  eval.c  gc.c  io.c  list.c  number.c  port.c  primitives.c  print.c  signal.c  slib.c  stk.h  stklos.c  syntax.c  toplevel.c  wstk.c
resources/Scheme/source/src/stk/Stack/: Makefile.in
resources/Scheme/source/src/stk/Tcl/: Makefile.in
resources/Scheme/source/src/stk/Tk/: Makefile
resources/Scheme/source/src/stk/Tk/unix/: Makefile.in
resources/Scheme/source/src/stk/Tk/win/: tkWinScrlbr.c
resources/Scheme/source/src/stk/Tk/win/rc/: stk.rc
resources/Scheme/source/src/stk/Win32/: STk.dsp  STk.dsw  STk.mak  addpmstk.c  addpmstk.dsp
resources/Scheme/source/src/stk/Win32/Doc/: install.doc
resources/Scheme/source/src/stk/Win32/libgmp/: libgmp.dsp  libgmp.mak
resources/Scheme/source/src/stk/Win32/libtcl/: libtcl.dsp  libtcl.mak
resources/Scheme/source/src/stk/Win32/libtk/: libtk.dsp  libtk.mak
resources/Scheme/source/src/ucb/: Makefile.in  configure  configure.ac
resources/Scheme/source/src/ucb/envdraw/: ANNOUNCE  color.stk  env-classes.stk  env-pointers.stk  env-toplev.stk  envdraw.in  environments.stk  math.stk  meta.stk  move-composite.stk  placement.stk  simple-pointer.stk  stacks.stk  view-classes.stk  view-debug.stk  view-misc.stk  view-pointers.stk  view-profiles.stk  view-toplev.stk  view-updates.stk  view.stk
resources/Scheme/source/src/ucb/envdraw/doc/figs/: diag1.ps  diag2.ps  diag3.ps  diag4.ps  diag5.ps  diag6.ps  diag7.ps
resources/Scheme/source/src/ucb/envdraw/lib/: envdraw.sh  stk-init.stk
resources/Scheme/source/src/ucb/envdraw/old/: adjpointers.stk  common-widget.stk
resources/Scheme/source/src/ucb/envdraw/test/: callcctest.stk
resources/Scheme/source/src/ucb/misc/: STk.spec  alarm.scm  alarmwin.scm  capture  class-load.stk  cs3-modeler.stk  cs3s-modeler.stk  mac-rebuild.txt  notes  switchsh.sh  traceit  tsc-test  win-bkscminst.sh  win-envdinst.sh  win-inst.sh  win-rebuild.txt  win-slibinst.sh  win-stkdbinst.sh
resources/Scheme/source/src/ucb/slib/: Makefile.in
resources/Scheme/source/src/ucb/stkdb/: ChangeLog  Makefile.in  TODO  pexpr.scm.in  read.scm.in  stkdb.el.in  stkdb.scm.in  uninst.scm
resources/Scheme/source/src/ucb/stkdb/doc/: stkdb.texinfo
